fix: navbar collapse size

--- a/app/assets/css/navbar.css
+++ b/app/assets/css/navbar.css
@@ -1,7 +1,7 @@
 
 /*Desktop navigation*/
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1290px) {
   .mobile {
     display: none;
   }
@@ -60,7 +60,7 @@
 
 /*Mobile*/
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1289px) {
   .desktop {
     display: none;
   }
